Add goa generated code
