# gen/http/cli/policy/cli.go
@@ -31,7 +31,7 @@ policy (evaluate|lock|unlock|list-policies)
 // UsageExamples produces an example of a valid invocation of the CLI tool.
 func UsageExamples() string {
 	return os.Args[0] + ` health liveness` + "\n" +
-		os.Args[0] + ` policy evaluate --body "Quibusdam ab repellendus in illum." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Nihil repudiandae dolore quod sunt aut." --ttl 4633716418015214972` + "\n" +
+		os.Args[0] + ` policy evaluate --body "Quaerat deleniti non nihil." --repository "policies" --group "example" --policy-name "example" --version "1.0" --evaluation-id "Fuga quae eius minus ex architecto." --ttl 8158055892212260579` + "\n" +
 		""
 }
 
@@ -55,6 +55,7 @@ func ParseEndpoint(
 
 		policyEvaluateFlags            = flag.NewFlagSet("evaluate", flag.ExitOnError)
 		policyEvaluateBodyFlag         = policyEvaluateFlags.String("body", "REQUIRED", "")
+		policyEvaluateRepositoryFlag   = policyEvaluateFlags.String("repository", "REQUIRED", "Policy repository.")
 		policyEvaluateGroupFlag        = policyEvaluateFlags.String("group", "REQUIRED", "Policy group.")
 		policyEvaluatePolicyNameFlag   = policyEvaluateFlags.String("policy-name", "REQUIRED", "Policy name.")
 		policyEvaluateVersionFlag      = policyEvaluateFlags.String("version", "REQUIRED", "Policy version.")
@@ -62,11 +63,13 @@ func ParseEndpoint(
 		policyEvaluateTTLFlag          = policyEvaluateFlags.String("ttl", "", "")
 
 		policyLockFlags          = flag.NewFlagSet("lock", flag.ExitOnError)
+		policyLockRepositoryFlag = policyLockFlags.String("repository", "REQUIRED", "Policy repository.")
 		policyLockGroupFlag      = policyLockFlags.String("group", "REQUIRED", "Policy group.")
 		policyLockPolicyNameFlag = policyLockFlags.String("policy-name", "REQUIRED", "Policy name.")
 		policyLockVersionFlag    = policyLockFlags.String("version", "REQUIRED", "Policy version.")
 
 		policyUnlockFlags          = flag.NewFlagSet("unlock", flag.ExitOnError)
+		policyUnlockRepositoryFlag = policyUnlockFlags.String("repository", "REQUIRED", "Policy repository.")
 		policyUnlockGroupFlag      = policyUnlockFlags.String("group", "REQUIRED", "Policy group.")
 		policyUnlockPolicyNameFlag = policyUnlockFlags.String("policy-name", "REQUIRED", "Policy name.")
 		policyUnlockVersionFlag    = policyUnlockFlags.String("version", "REQUIRED", "Policy version.")
@@ -182,13 +185,13 @@ func ParseEndpoint(
 			switch epn {
 			case "evaluate":
 				endpoint = c.Evaluate()
-				data, err = policyc.BuildEvaluatePayload(*policyEvaluateBodyFlag, *policyEvaluateGroupFlag, *policyEvaluatePolicyNameFlag, *policyEvaluateVersionFlag, *policyEvaluateEvaluationIDFlag, *policyEvaluateTTLFlag)
+				data, err = policyc.BuildEvaluatePayload(*policyEvaluateBodyFlag, *policyEvaluateRepositoryFlag, *policyEvaluateGroupFlag, *policyEvaluatePolicyNameFlag, *policyEvaluateVersionFlag, *policyEvaluateEvaluationIDFlag, *policyEvaluateTTLFlag)
 			case "lock":
 				endpoint = c.Lock()
-				data, err = policyc.BuildLockPayload(*policyLockGroupFlag, *policyLockPolicyNameFlag, *policyLockVersionFlag)
+				data, err = policyc.BuildLockPayload(*policyLockRepositoryFlag, *policyLockGroupFlag, *policyLockPolicyNameFlag, *policyLockVersionFlag)
 			case "unlock":
 				endpoint = c.Unlock()
-				data, err = policyc.BuildUnlockPayload(*policyUnlockGroupFlag, *policyUnlockPolicyNameFlag, *policyUnlockVersionFlag)
+				data, err = policyc.BuildUnlockPayload(*policyUnlockRepositoryFlag, *policyUnlockGroupFlag, *policyUnlockPolicyNameFlag, *policyUnlockVersionFlag)
 			case "list-policies":
 				endpoint = c.ListPolicies()
 				data, err = policyc.BuildListPoliciesPayload(*policyListPoliciesLockedFlag, *policyListPoliciesRegoFlag, *policyListPoliciesDataFlag, *policyListPoliciesDataConfigFlag)
@@ -253,10 +256,11 @@ Additional help:
 `, os.Args[0])
 }
 func policyEvaluateUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy evaluate -body JSON -group STRING -policy-name STRING -version STRING -evaluation-id STRING -ttl INT
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy evaluate -body JSON -repository STRING -group STRING -policy-name STRING -version STRING -evaluation-id STRING -ttl INT
 
 Evaluate executes a policy with the given 'data' as input.
     -body JSON: 
+    -repository STRING: Policy repository.
     -group STRING: Policy group.
     -policy-name STRING: Policy name.
     -version STRING: Policy version.
@@ -264,33 +268,35 @@ Evaluate executes a policy with the given 'data' as input.
     -ttl INT: 
 
 Example:
-    %[1]s policy evaluate --body "Quibusdam ab repellendus in illum." --group "example" --policy-name "example" --version "1.0" --evaluation-id "Nihil repudiandae dolore quod sunt aut." --ttl 4633716418015214972
+    %[1]s policy evaluate --body "Quaerat deleniti non nihil." --repository "policies" --group "example" --policy-name "example" --version "1.0" --evaluation-id "Fuga quae eius minus ex architecto." --ttl 8158055892212260579
 `, os.Args[0])
 }
 
 func policyLockUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy lock -group STRING -policy-name STRING -version STRING
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy lock -repository STRING -group STRING -policy-name STRING -version STRING
 
 Lock a policy so that it cannot be evaluated.
+    -repository STRING: Policy repository.
     -group STRING: Policy group.
     -policy-name STRING: Policy name.
     -version STRING: Policy version.
 
 Example:
-    %[1]s policy lock --group "Aliquam atque voluptatum ut dolorem." --policy-name "Aut facere veniam repudiandae id." --version "Aut minus alias."
+    %[1]s policy lock --repository "Aut minus alias." --group "At eos facilis molestias in voluptas rem." --policy-name "Ab accusantium ut ut aliquid sint animi." --version "Dolorem cumque laborum quis nesciunt."
 `, os.Args[0])
 }
 
 func policyUnlockUsage() {
-	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy unlock -group STRING -policy-name STRING -version STRING
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] policy unlock -repository STRING -group STRING -policy-name STRING -version STRING
 
 Unlock a policy so it can be evaluated again.
+    -repository STRING: Policy repository.
     -group STRING: Policy group.
     -policy-name STRING: Policy name.
     -version STRING: Policy version.
 
 Example:
-    %[1]s policy unlock --group "Aut voluptas." --policy-name "Sint nam voluptatem ea consequatur similique et." --version "Non mollitia nesciunt impedit facere."
+    %[1]s policy unlock --repository "Accusamus autem sequi." --group "Et nulla." --policy-name "In quis nesciunt autem et." --version "Sunt in et quia cum."
 `, os.Args[0])
 }
 
@@ -304,6 +310,6 @@ List policies from storage with optional filters.
     -data-config BOOL: 
 
 Example:
-    %[1]s policy list-policies --locked false --rego true --data false --data-config false
+    %[1]s policy list-policies --locked true --rego false --data false --data-config true
 `, os.Args[0])
 }
