# gen/http/policy/server/paths.go
@@ -12,28 +12,28 @@ import (
 )
 
 // EvaluatePolicyPath returns the URL path to the policy service Evaluate HTTP endpoint.
-func EvaluatePolicyPath(group string, policyName string, version string) string {
-	return fmt.Sprintf("/policy/%v/%v/%v/evaluation/did.json", group, policyName, version)
+func EvaluatePolicyPath(repository string, group string, policyName string, version string) string {
+	return fmt.Sprintf("/policy/%v/%v/%v/%v/evaluation/did.json", repository, group, policyName, version)
 }
 
 // EvaluatePolicyPath2 returns the URL path to the policy service Evaluate HTTP endpoint.
-func EvaluatePolicyPath2(group string, policyName string, version string) string {
-	return fmt.Sprintf("/policy/%v/%v/%v/evaluation", group, policyName, version)
+func EvaluatePolicyPath2(repository string, group string, policyName string, version string) string {
+	return fmt.Sprintf("/policy/%v/%v/%v/%v/evaluation", repository, group, policyName, version)
 }
 
 // EvaluatePolicyPath3 returns the URL path to the policy service Evaluate HTTP endpoint.
-func EvaluatePolicyPath3(group string, policyName string, version string) string {
-	return fmt.Sprintf("/policy/%v/%v/%v/evaluation", group, policyName, version)
+func EvaluatePolicyPath3(repository string, group string, policyName string, version string) string {
+	return fmt.Sprintf("/policy/%v/%v/%v/%v/evaluation", repository, group, policyName, version)
 }
 
 // LockPolicyPath returns the URL path to the policy service Lock HTTP endpoint.
-func LockPolicyPath(group string, policyName string, version string) string {
-	return fmt.Sprintf("/policy/%v/%v/%v/lock", group, policyName, version)
+func LockPolicyPath(repository string, group string, policyName string, version string) string {
+	return fmt.Sprintf("/policy/%v/%v/%v/%v/lock", repository, group, policyName, version)
 }
 
 // UnlockPolicyPath returns the URL path to the policy service Unlock HTTP endpoint.
-func UnlockPolicyPath(group string, policyName string, version string) string {
-	return fmt.Sprintf("/policy/%v/%v/%v/lock", group, policyName, version)
+func UnlockPolicyPath(repository string, group string, policyName string, version string) string {
+	return fmt.Sprintf("/policy/%v/%v/%v/%v/lock", repository, group, policyName, version)
 }
 
 // ListPoliciesPolicyPath returns the URL path to the policy service ListPolicies HTTP endpoint.
